# axonote

./: .editorconfig  .gitignore  Makefile  README.md  docker-compose.dev.yml  env.example  promptInicial.txt  test_responsive_preview.html  test_results_pwa.md
Documentacion/: .~lock.B13.4-Manual-Despliegue-Servidor-LAMP.md#  A2.1-Fase-2-Frontend-PWA.md  ANALISIS-TECNICO-PENDIENTES.md  AUDIT-FASES-2-Y-6.md  AUDIT-FASES-2-Y-6.md.backup.20250910_200517  AUDITORIA-COMPLETA-FASES-0-12-SEPTIEMBRE-2025.md  AUDITORIA-ESTADO-ACTUAL-13-SEPTIEMBRE-2025.md  B0.1-Fase-0-Infraestructura.md  B1.1-Fase-1-Backend-Base.md  B10.1-Fase-10-Export-Multi-Modal-TTS.md  B10.2-Resumen-Implementacion-Fase-10.md  B11.1-Fase-11-Dashboard-y-Metricas.md  B11.2-Resumen-Implementacion-Fase-11.md  (+29 more)
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: .gitkeep  001_agregar_modelos_metricas.py  002_add_ai_analytics_tables.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: __init__.py
apps/api/app/api/v1/: __init__.py  analytics.py  api.py
apps/api/app/api/v1/endpoints/: __init__.py  admin.py  dashboard.py  export.py  health.py  llm_analysis.py  micromemos.py  notion.py  ocr.py  processing.py  recordings.py  research.py  settings.py  tts.py
apps/api/app/core/: __init__.py  config.py  database.py  decorador_metricas.py  logging.py  security.py
apps/api/app/middleware/: __init__.py  rate_limiting.py  security.py
apps/api/app/models/: __init__.py  admin.py  analytics.py  base.py  card.py  class_session.py  class_session_segura.py  diarization_result.py  export_session.py  llm_analysis_result.py  medical_source.py  medical_terminology.py  metrica_calidad.py  metrica_procesamiento.py  metrica_sistema.py  micro_memo.py  micro_memo_collection.py  notion_sync_record.py  notion_template.py  ocr_result.py  post_processing_result.py  processing_job.py  professor.py  research_job.py  research_result.py  sesion_metrica.py  source.py  source_cache.py  tenant.py  term.py  transcription_result.py  tts_result.py  upload_session.py  usuario.py
apps/api/app/schemas/: __init__.py  analytics.py  base.py  card.py  class_session.py  professor.py  source.py  term.py
apps/api/app/services/: __init__.py  admin_service.py  auditoria_service.py  auth_service.py  backup_service.py  base.py  chunk_service.py  content_validator.py  diarization_service.py  encryption_service.py  export_service.py  gdpr_service.py  italian_sources_service.py  llm_service.py  medlineplus_service.py  micro_memo_service.py  minio_service.py  nih_service.py  notion_service.py  ocr_service.py  post_processing_service.py  pubmed_service.py  rate_limiter.py  rate_limiter_service.py  research_service.py  security_monitoring.py  servicio_dashboard.py  servicio_recoleccion_metricas.py  source_cache_service.py  tenant_service.py  tts_service.py  validation_service.py  whisper_service.py  who_service.py
apps/api/app/services/analytics/: learning_analytics_engine.py
apps/api/app/services/ml/: difficulty_estimator.py  retention_predictor.py
apps/api/app/services/recommendations/: hybrid_recommender.py
apps/api/app/tasks/: __init__.py  export.py  export_tts.py  llm_analysis.py  notion.py  ocr_micromemos.py  processing.py  research.py
apps/api/app/workers/: __init__.py  celery_app.py
apps/api/tests/: __init__.py  conftest.py  test_health.py
(+68 files in other folders)
